src/app/event-details/event-details.component.css
.detail-card {
    width: 100%;
    margin: auto;
    max-width: 428px;
    z-index: 3;
    min-height: 60vh;
}

@media (max-width: 767px) {
    .full-container {
        background-color: white;
        width: 100vw;
    }

    .detail-card {
        min-height: 100vh;
    }
}

.back-button {
    left: 10px; top: 10px;
    z-index: 2;
    position: fixed;
    cursor: pointer;
}

@media (min-width: 768px) {
    .back-button {
        display: none;
    }    
}

.card-header {
    padding: 12px;
    padding-bottom: 3px;
    position: relative;
}

.edit-button {
    position: absolute;
    top: 12px;
    right:25px;
}

.event-name {
    color: white;
    font-weight: bold;
    font-size: 14pt;
    padding-left: 10px;
}

.event-time {
    color: whitesmoke;
    font-size: 10pt;
    padding: 5px;
    padding-left: 10px;
    padding-bottom: 12px;
}

.description {
    padding-left: 10px;
    padding-right: 10px;
    margin-top: -20px;
}

